--- a/singletask/src/pages/edit-task/edit-task.html
+++ b/singletask/src/pages/edit-task/edit-task.html
@@ -23,7 +23,7 @@
                 <ion-icon name="trash"></ion-icon>
               </button> -->
               <ion-icon *ngIf="t.done" color="secondary" name="checkmark"></ion-icon>
-              {{t.description}}
+              {{t.description}}git
           </h2>
         </ion-item>
 
