--- a/multitask/src/pages/home/home.html
+++ b/multitask/src/pages/home/home.html
@@ -1,14 +1,39 @@
 <ion-content padding>
   <div class="calendar">
-    
-    <span (click)="updateDay('yesterday')" class='hidden' [@openCalendar]="open_calendar">
+
+    <span 
+          [ngClass]="{'today':this.real_today==days.twoDaysAgo && open_calendar}" 
+          (click)="updateDay(-2)" 
+          class='hidden' 
+          [@openCalendar2]="open_calendar">
+      {{days.twoDaysAgo}}
+    </span>    
+    <span 
+          [ngClass]="{'today':this.real_today==days.yesterday && open_calendar}" 
+          (click)="updateDay(-1)" 
+          class='hidden' 
+          [@openCalendar]="open_calendar">
       {{days.yesterday}}
     </span>
-    <span (click)="open_calendar=open_calendar=='open'?'':'open'">
+    <span 
+          [ngClass]="{'today':this.real_today==days.today && open_calendar}" 
+          (click)="open_calendar=open_calendar=='open'?'':'open'"
+          class="current">
       {{days.today}}
     </span>
-    <span (click)="updateDay('tomorrow')" class='hidden' [@openCalendar]="open_calendar">
+    <span 
+          [ngClass]="{'today':this.real_today==days.tomorrow && open_calendar}" 
+          (click)="updateDay(1)" 
+          class='hidden' 
+          [@openCalendar]="open_calendar">
       {{days.tomorrow}}
+    </span>
+    <span 
+          [ngClass]="{'today':this.real_today==days.twoDaysFromNow && open_calendar}" 
+          (click)="updateDay(2)" 
+          class='hidden' 
+          [@openCalendar2]="open_calendar">
+      {{days.twoDaysFromNow}}
     </span>
 
   </div>
